--- a/index.html
+++ b/index.html
@@ -113,7 +113,77 @@
      </article>
 
      <!-- Frequently Asked Question -->
+     <section class="border-bottom">
+        <div class="container px-2 px-md-0 py-5 ">
+            <h2 class="px-5 px-md-0 text-center fw-bold button-style-text">Frequently Asked Question (FAQ)</h2>
+            <!-- Accordion -->
+            <div class="accordion p-5" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        <div class="fw-semibold">Apa yang dimaksud dengan wilayah 3T?</div>
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                    <div class="accordion-body" id="tanya-1"></div>
+                  </div>
+                </div>
 
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                        <div class="fw-semibold">Siapa saja yang dapat mendaftar untuk website WomenRise3T?</div>
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                    <div class="accordion-body" id="tanya-2">
+                      
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                        <div class="fw-semibold">Bagaimana cara mendapatkan sesi mentoring?</div>
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                    <div class="accordion-body" id="tanya-3"></div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                          <div class="fw-semibold">Apakah layanan mentoring berbayar?</div>
+                      </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+                      <div class="accordion-body" id="tanya-4"></div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                          <div class="fw-semibold">Bagaimana cara menghubungi tim WomenRise3T jika saya mengalami masalah?</div>
+                      </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
+                      <div class="accordion-body" id="tanya-5"></div>
+                    </div>
+                </div>
+              </div>
+        </div>
+    </section>
+
+    <!-- Sponsors -->
+    <article class="background-lightblue border-bottom">
+        <div class="container px-5 px-md-0 py-5 text-center">
+            <h2 class="button-style-text fw-bold">Sponsors</h2>
+        </div>
+    </article>
     <!-- Footer -->
      <div id="footer"></div>
      
